ui/fix: added sd-width property to editor (fixes SD-4867)
This will allow users to interact with the layout of the editor, which
might sometime become misaligned if the configuration is an odd one. For
example, adding a component such as an abstract (which has a character
counter) with a narrow width such as `'quarter'` will definitely break
layout.

The default for all will be `'full'`.

--- a/scripts/superdesk-authoring/styles/themes.less
+++ b/scripts/superdesk-authoring/styles/themes.less
@@ -269,8 +269,10 @@ body, html {
     max-width: 900px;
 
     .main-article__fieldset {
-        display:flex;
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
     }
 
     .field {
